--- a/DRIVE/cfgs/sac_ae_mlnet.yml
+++ b/DRIVE/cfgs/sac_ae_mlnet.yml
@@ -18,8 +18,8 @@ ENV:
 SAC:
   gamma: 0.99
   tau: 0.005
-  lr: 0.0000003
-  lr_alpha: 0.00000005
+  lr: 0.00003
+  lr_alpha: 0.000005
   num_classes: 2
   hidden_size: 64
   dim_state: 128
